--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "antd": "^5.8.2",
+    "@nextui-org/react": "^2.0.14",
+    "@tailwindcss/forms": "^0.5.4",
+    "@tremor/react": "^3.6.1",
+    "framer-motion": "^10.15.1",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,6 +25,9 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
