--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "@nextui-org/react": "^2.0.14",
     "@tailwindcss/forms": "^0.5.4",
-    "@tremor/react": "^3.6.1",
+    "chart.js": "^4.3.3",
     "framer-motion": "^10.15.1",
     "gh-pages": "^5.0.0",
+    "install": "^0.13.0",
+    "npm": "^9.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "styled-components": "^6.0.7"
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
