--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   "dependencies": {
     "@nextui-org/react": "^2.0.14",
     "@tailwindcss/forms": "^0.5.4",
-    "chart.js": "^4.3.3",
+    "apexcharts": "^3.41.1",
     "framer-motion": "^10.15.1",
     "gh-pages": "^5.0.0",
     "install": "^0.13.0",
     "npm": "^9.8.1",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
