--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "npm": "^9.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sonner": "^0.6.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
