--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,6 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.0.14",
     "@tailwindcss/forms": "^0.5.4",
     "apexcharts": "^3.41.1",
     "framer-motion": "^10.15.1",
@@ -22,6 +21,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.1",
     "sonner": "^0.6.2"
   },
   "devDependencies": {
