--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "git": "^0.1.5",
+    "mongoose": "^8.0.3",
     "nodemon": "^3.0.2"
   }
 }
