--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.4",
+    "@tanstack/react-query": "^5.15.5",
+    "@tanstack/react-query-devtools": "^5.15.5",
     "apexcharts": "^3.41.1",
     "framer-motion": "^10.15.1",
     "gh-pages": "^5.0.0",
