--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "@tailwindcss/forms": "^0.5.4",
     "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-query-devtools": "^5.15.5",
@@ -23,6 +24,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
     "sonner": "^0.6.2"
   },
