--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@tailwindcss/forms": "^0.5.4",
     "@tanstack/react-query": "^4.35.3",
-    "@tanstack/react-query-devtools": "^5.15.5",
+    "@tanstack/react-query-devtools": "^4.35.3",
     "apexcharts": "^3.41.1",
     "framer-motion": "^10.15.1",
     "gh-pages": "^5.0.0",
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
+    "redux-persist": "^6.0.0",
     "sonner": "^0.6.2"
   },
   "devDependencies": {
