--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-query-devtools": "^4.35.3",
     "apexcharts": "^3.41.1",
+    "firebase": "^10.7.1",
     "framer-motion": "^10.15.1",
     "gh-pages": "^5.0.0",
     "install": "^0.13.0",
