--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
     "redux-persist": "^6.0.0",
